# mouse_recorder

./: Cargo.toml  README.md  recording.yaml
src/: controller.rs  formatting.rs  main.rs  message.rs  model.rs  platform.rs  playback.rs  state.rs  storage.rs  view.rs
src/controller/: editor.rs  helpers.rs  modal.rs  runtime.rs
src/view/: helpers.rs  main_view.rs  modals.rs  panels.rs
