[package]
name = "mouse_recorder"
version = "0.2.0"
edition = "2021"

[dependencies]
rustautogui = { version = "2.5.0", features = ["opencl"] }
iced = { version = "0.14.0", features = ["tokio", "image", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
anyhow = "1.0"
base64 = "0.22"
image = { version = "0.25", default-features = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_Graphics_Gdi"
] }

[profile.dev]
opt-level = 1